# lwjs

./: .gitignore  README.md  main.py  main.ssjs.jsonc  pyproject.toml  release.sh
.github/workflows/: pytest.yml
lwjs/: __init__.py  bone.py  chop.py  cook.py  funs.py  util.py
lwjs/core/: chop.py  cook.py  help.py  util.py
lwjs/funs/: calc.py  date.py  dump.py  false.py  map.py  nvl.py  true.py  void.py
ssjs/: __init__.py  args.py  base.py  depo.py
ssjs/core/: help.py  kind.py  pump.py
ssjs/kind/: line.py  list.py
test/: test_chop.py  test_cook.py  test_funs.py
test/ssjs/: test_args.py
